Correct padding for docusaurus content on mobile

--- a/packages/docusaurus/src/theme/DocPage/Layout/styles.module.css
+++ b/packages/docusaurus/src/theme/DocPage/Layout/styles.module.css
@@ -6,3 +6,9 @@
 .docsWrapper {
   display: flex;
 }
+
+@media only screen and (max-width: 900px) {
+  .docPage {
+    padding-inline: var(--rvo-space-md);
+  }
+}
